--- a/base/build.gradle
+++ b/base/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     baseFeature true
     defaultConfig {
-        minSdkVersion 15
+        minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -20,6 +20,8 @@ android {
 dependencies {
     api 'com.android.support:appcompat-v7:28.0.0-rc02'
     api 'com.android.support:design:28.0.0-rc02'
+    api 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     application project(':app')
     feature project(':logon')
 }
