--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
-    
+
 
 
     defaultConfig {
@@ -16,15 +16,17 @@ android {
     }
 
     buildTypes {
-       release {
-           minifyEnabled false
-           proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-       }
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
     }
 
 }
 
 dependencies {
+    implementation project(':menu')
     implementation project(':logon')
     implementation project(':base')
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
