--- a/base/src/main/AndroidManifest.xml
+++ b/base/src/main/AndroidManifest.xml
@@ -6,10 +6,8 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
         android:icon="@mipmap/logo"
-        android:label="@string/app_name"
         android:roundIcon="@mipmap/logo_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:supportsRtl="true">
         <meta-data
             android:name="aia-compat-api-min-version"
             android:value="1" />
