--- a/logon/src/main/AndroidManifest.xml
+++ b/logon/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
     <application>
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name">
+            android:theme="@style/LogonTheme"
+            android:label="TERST">
             <intent-filter android:order="1">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.BROWSABLE" />
