--- a/menu/src/main/AndroidManifest.xml
+++ b/menu/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application>
         <activity
             android:name=".MenuActivity"
-            android:label="@string/app_name">
+            android:theme="@style/MenuTheme">
         </activity>
     </application>
 
