--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,17 +3,14 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
 
-
-
     defaultConfig {
-        applicationId "nl.orsit.logger.app"
+        applicationId "com.penbtechniek.orsit"
+        versionCode 100
+        versionName "2.0"
         minSdkVersion 23
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
-
-
     }
+
 
     buildTypes {
         release {
@@ -28,5 +25,4 @@ dependencies {
     implementation project(':menu')
     implementation project(':logon')
     implementation project(':base')
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
