--- a/base/build.gradle
+++ b/base/build.gradle
@@ -6,22 +6,21 @@ android {
     defaultConfig {
         minSdkVersion 23
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
     }
 }
 
 dependencies {
-    api 'com.android.support:appcompat-v7:28.0.0-rc02'
-    api 'com.android.support:design:28.0.0-rc02'
+    api 'com.android.support:appcompat-v7:28.0.0'
     api 'com.squareup.okhttp3:okhttp:3.11.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    api 'com.android.support:design:28.0.0'
+    api 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
     application project(':app')
     feature project(':logon')
     feature project(':menu')
