--- a/logon/src/main/AndroidManifest.xml
+++ b/logon/src/main/AndroidManifest.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="nl.orsit.logger.logon">
-    <uses-permission android:name="android.permission.INTERNET" />
 
     <application>
         <activity
             android:name=".LoginActivity"
             android:theme="@style/LogonTheme"
-            android:label="TERST">
+            android:label="ORSIT">
             <intent-filter android:order="1">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.BROWSABLE" />
