--- a/menu/src/main/AndroidManifest.xml
+++ b/menu/src/main/AndroidManifest.xml
@@ -2,11 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="nl.orsit.menu">
 
+    <uses-feature android:name="android.hardware.camera2.full"/>
+
     <application>
         <activity
             android:name=".MenuActivity"
             android:theme="@style/MenuTheme">
         </activity>
+        <activity android:name=".logs.ScannerActivity"
+            android:theme="@style/MenuTheme"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
