--- a/menu/build.gradle
+++ b/menu/build.gradle
@@ -10,5 +10,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':base')
+    api 'com.google.zxing:core:3.3.3'
+    api 'androidx.annotation:annotation:1.0.0'
 
 }
